Rag refactor / improvements (#168)